objects/copado__Pull_Request__c.object
<CustomObject>
    <fields>
        <fullName>Total_Reviewers_Requested_Long__c</fullName>
        <label>Total Reviewers Requested Long</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reviewers_Required_Long__c</fullName>
        <label>Total Reviewers Required Long</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Approval_Status__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <inlineHelpText>Indicates the current approval status of the pull request. This information is retrieved directly from the connected Git provider and reflects whether the required reviewers have approved the pull request. Depending on the provider, data may be available via webhook or may require OAuth authorization.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Assignees__c</fullName>
        <label>Assignees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Changed_Files__c</fullName>
        <description>The number of files changed in the pull request</description>
        <label>Changed Files</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Closed_At__c</fullName>
        <description>The date when the pull request was closed or empty if it is not closed</description>
        <label>Closed At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Commits__c</fullName>
        <description>The number of commits in the pull request</description>
        <label>Commits</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Mergeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mergeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Merged_At__c</fullName>
        <description>The date when the pull request was merged or empty if it is not merged</description>
        <label>Merged At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Merged_By__c</fullName>
        <description>The git hub username who merged the pull request</description>
        <label>Merged By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Request_Number__c</fullName>
        <description>Pull Request Number</description>
        <label>Request Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Requested_Reviewers_Long__c</fullName>
        <description>This field has been replaced by the copado__Requested_Reviewers_Long__c field.</description>
        <label>Requested Reviewers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Requested_Reviewers__c</fullName>
        <label>Requested Reviewers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Required_Reviewer_Approvals__c</fullName>
        <inlineHelpText>Specifies the number of required reviewer approvals set in your Git provider. Helps determine if a pull request meets the configured approval threshold. Depending on the provider, data may be available via webhook or may require OAuth authorization.</inlineHelpText>
        <label>Required Reviewer Approvals</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Reviewer_Approvals_Count__c</fullName>
        <inlineHelpText>Shows the number of reviewers who have approved the pull request. Updates automatically as reviewers approve the pull request in your Git provider. Depending on the provider, data may be available via webhook or may require OAuth authorization</inlineHelpText>
        <label>Reviewer Approvals Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__State__c</fullName>
        <description>The state of the pull request</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Target_Branch__c</fullName>
        <description>The target branch of the pull request</description>
        <label>Target Branch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__URL_Link__c</fullName>
        <formula>IF(
 ISBLANK(copado__Url__c),
 &quot;&quot;,
 HYPERLINK(copado__Url__c, &quot;Go to Review&quot;)
)</formula>
        <label>URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Url__c</fullName>
        <description>Pull Request Url</description>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__User_Avatar_Url__c</fullName>
        <label>User Avatar Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__User_Avatar__c</fullName>
        <formula>IMAGE(copado__User_Avatar_Url__c, copado__Username__c, 50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Avatar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Pull Requests</relationshipLabel>
        <relationshipName>Pull_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pull Request</label>
    <nameField>
        <label>Pull Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pull Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>